feat: updated gradle; improved performance; java 21 source; updated readme; new features;